--- a/lemon/Base.lproj/Main.storyboard
+++ b/lemon/Base.lproj/Main.storyboard
@@ -10,6 +10,28 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Camera View Controller-->
+        <scene sceneID="Kc0-n6-Fc5">
+            <objects>
+                <viewController id="99j-Ux-hlK" customClass="cameraViewController" customModule="lemon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Eyq-lk-Reg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnQ-oJ-aeA">
+                                <rect key="frame" x="157" y="587" width="60" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="KI5-WA-nPd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NAP-cP-391" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="513" y="-654"/>
+        </scene>
         <!--Lemon-->
         <scene sceneID="yfH-2q-MjY">
             <objects>
@@ -55,7 +77,11 @@
                                 <segue destination="uYF-Qh-E2c" kind="show" id="2eC-wC-v7c"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="gnY-ca-fnz"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="gnY-ca-fnz">
+                            <connections>
+                                <segue destination="99j-Ux-hlK" kind="presentation" id="DBF-Wk-5Ot"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H2s-5B-heZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
